--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1064 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box !important;
+  list-style-type: none !important;
+  text-decoration: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* btn */
+.common_btn {
+  padding: 12px 24px;
+  background: #FFF624;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  transition:  all linear 300ms;
+
+}
+.common_btn:hover{
+  background-color: black;
+  color: #FFF624;
+  border: 1px solid #FFF624;
+}
+.common_btn span svg path{
+  transition: all linear 300ms;
+}
+.common_btn:hover span svg path{
+  fill: #FFF624 !important;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Clair_btn {
+  padding: 4px 16px;
+  color: #FFF624;
+  background: #FFFFFF0A;
+  border: 1px solid #FFF6243D;
+  border-radius: 6px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* margin padding gap */
+.gap-32 {
+  gap: 32px;
+}
+
+.gap-12 {
+  gap: 12px;
+}
+
+.ml-28 {
+  margin-left: 28px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.gap-10 {
+  gap: 10px;
+}
+
+.mt-35 {
+  margin-top: 35px;
+}
+
+.gap-14 {
+  gap: 14px;
+}
+
+.mt_32 {
+  margin-top: 32px;
+}
+
+.pl-15 {
+  padding-left: 15px;
+}
+
+.mt-12 {
+  margin-top: 12px;
+}
+
+.mb-12 {
+  margin-bottom: 12px;
+}
+.pb-154{
+  padding-bottom: 115px;
+}
+.pb_154{
+  padding-bottom: 40px;
+}
+.pt-100 {
+  padding-top: 20px;
+}
+
+.mt-32 {
+  margin-top: 10px !important;
+}
+
+.pb-54 {
+  padding-bottom: 9px;
+}
+
+.pt-152 {
+  padding-top: 110px;
+}
+.pb-160{
+  padding-bottom: 160px;
+
+}
+
+.ml_17 {
+  margin-left: -17px;
+}
+
+.pt-104 {
+  padding-top: unset;
+}
+
+.pb-60 {
+  padding-bottom: 24px;
+}
+
+.pt-20 {
+  padding-top: unset;
+}
+
+.pt-158 {
+  padding-top: 158px;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.pb-83 {
+  padding-bottom: 33px;
+}
+
+.pt-49 {
+  padding-top: 25px;
+}
+
+.pt-165 {
+  padding-top: 117px;
+}
+
+.pb-165 {
+  padding-bottom: 117px;
+}
+
+.pb-40 {
+  padding-bottom: 40px;
+}
+
+.pt-66 {
+  padding-top: 25px;
+}
+
+.pt-114 {
+  padding-top: 24px;
+}
+
+.pb-34 {
+  padding-bottom: 34px;
+}
+
+.mt_2 {
+  margin-top: -2px;
+}
+
+.pb-77 {
+  padding-bottom: 77px;
+}
+
+.mt-100 {
+  margin-top: 30px;
+}
+.pb-96{
+  padding-bottom: 10px;
+}
+
+.pt-35{
+  margin-top: 35px;
+}
+
+
+
+
+
+/* hero */
+.hero_bg_img {
+  background-image: url(./assets/images/png/hero-bg-img.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.nav_box {
+  background: #F1F1F105;
+  backdrop-filter: blur(6px);
+  border-bottom: 1px solid #F1F1F129;
+  padding-top: 26px;
+ position: relative;
+ z-index: 999;
+  padding-bottom: 26px;
+}
+
+.nav_text {
+  transition: all linear 300ms;
+}
+
+.nav_text:hover {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+img[alt="personimg"] {
+  max-width: 810px;
+
+}
+/* priloder */
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.loading{
+  min-height: 100vh !important;
+  background: black !important;
+  min-width: 100% !important;
+  display:  flex;
+  justify-content: center;
+   flex-direction: column;
+   align-items: center;
+}
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #FFF624;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+.big_box {
+  padding: 20px;
+  max-width: 818px;
+  width: 100%;
+  background: #FFFFFF05;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  position: relative;
+  z-index: 1;
+
+}
+
+.clair_box {
+  max-width: unset;
+  width: 100%;
+}
+
+.clair_box_border {
+  width: 2px;
+  height: 32px;
+  background: linear-gradient(180deg, rgba(255, 246, 36, 0.0222222) 0%, #FFF624 55%, rgba(255, 246, 36, 0) 100%);
+  opacity: 0.2;
+
+}
+
+.small_common_box {
+  width: 53px;
+  height: 53px;
+  background: #313131;
+  border-radius: 5px;
+}
+
+.Buy_btn {
+  max-width: 254px;
+  width: 100%;
+  padding: 12px;
+  border-radius: 10px;
+  background: #FFF624;
+  border: 1px solid transparent;
+  transition: all linear 300ms;
+
+}
+.Buy_btn:hover{
+  background-color: black;
+  color: #FFF624;
+  border: 1px solid #FFF624;
+}
+.slider_bor_1{
+  max-width: 
+  350px;
+  width: 100%;
+  opacity: 
+  20%;
+background: #FFF624;
+height: 1px;
+}
+.slider_bor_3{
+  max-width: 
+  290px;
+  width: 100%;
+  opacity: 
+  20%;
+background: #FFF624;
+height: 1px;
+}
+.slider_bor_2{
+  max-width: 
+  150px;
+  width: 100%;
+  opacity: 
+  20%;
+background: #FFF624;
+height: 1px;
+}
+
+.price {
+  max-width:
+    404px;
+  width: 100%;
+}
+
+img[alt="procesbaar"] {
+  margin-top: -12px;
+}
+
+img[alt="herolyar"] {
+  position: absolute;
+  max-width: 1440px;
+  width: 100%;
+  bottom: -5%;
+  z-index: 1;
+}
+
+.counting_box{
+  background: #FFF62433;
+  border-radius: 4px;
+
+width: 50px;
+height: 40px;
+
+}
+/* about */
+img[alt="cartoonpos"] {
+  position: absolute;
+  top: 22%;
+  right: 14%;
+  max-width: 284px;
+  width: 100%;
+}
+
+.mt25{
+  margin-top: 25px;
+}
+/* contect */
+.copy_input_box {
+  border: 1px solid #FFFFFF3D;
+  background: #FFFFFF14;
+  max-width: 514px;
+  padding: 12px 12px 12px 12px;
+  border-radius: 8px;
+}
+
+.copyinput {
+  outline: none !important;
+}
+
+.Contract_section{
+  background-color: #171607;
+  background-image: url(../src/assets/images/png/contect-address.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+}
+/* token */
+img[alt="tokenimg"] {
+  max-width: 491px;
+  width: 100%;
+
+}
+.Tokenomics_bg{
+  background-image: url(../src/assets/images/png/Tokenomics_bg.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: #080802;
+}
+.token_box {
+  max-width: 1320px;
+  border: 0;
+  padding: 24px;
+  border-radius: 16px;
+  background: #FFFFFF0F;
+  z-index: 2;
+  position: relative;
+}
+
+.token_box::before {
+  content: "";
+  position: absolute;
+  border: 1px solid transparent;
+  background: linear-gradient(107.74deg, rgba(255, 246, 36, 0.27) -16.6%, rgba(255, 246, 36, 0) 134.64%);
+  width: 100%;
+  mask-composite: exclude;
+  inset: 0;
+  border-radius:
+    16px;
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  mask-composite: exclude;
+  z-index: -1;
+  transition: all linear 300ms !important;
+}
+
+img[alt="sinclaircartoon"] {
+  max-width: 336px;
+  width: 100%;
+}
+
+/* Audited */
+.Audited_bgimg{
+  background-image: url(../src/assets/images/png/Audited-address.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  background-color: #141403;
+  margin-bottom: -30px;
+}
+img[alt="Auditedimglogo"] {
+  max-width: 245px;
+  width: 100%;
+}
+
+.aud-line {
+  background: #FFF624;
+  opacity: 0.3;
+  width: 100%;
+  min-height: 1px;
+}
+
+.clair_text {
+  max-width:
+    475px;
+}
+
+.coinbase_box {
+  border: none;
+  background: #FFFFFF14;
+  padding: 40px 15px 15px;
+  border-radius: 16px;
+  position: relative;
+  z-index: 1;
+}
+
+.coinbase_box::before {
+  content: "";
+  position: absolute;
+  border: 1px solid transparent;
+  background: linear-gradient(107.74deg, rgba(255, 246, 36, 0.27) -16.6%, rgba(255, 246, 36, 0) 134.64%);
+  width: 100%;
+  mask-composite: exclude;
+  inset: 0;
+  border-radius:
+    16px;
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  mask-composite: exclude;
+  z-index: -1;
+  transition: all linear 300ms !important;
+}
+
+.slick-track {
+  display: flex !important;
+  gap: 32px !important;
+  align-items: center !important;
+}
+
+.w-content {
+  max-width: 267px;
+  padding: 23px 36px;
+  background: white;
+  border-radius: 7.38px;
+}
+img[alt="autbg1"]{
+
+  position: absolute;
+  max-width: 663px;
+  width: 100%;
+  top: -53%;
+  left: -19px;
+
+}
+img[alt="autbg2"]{
+  position: absolute;
+  max-width: 663px;
+  width: 100%;
+  top: -16%;
+  left: 0;
+ 
+}
+
+/* accodion */
+.accordion-item {
+  background: #FFFFFF14 !important;
+
+  max-width:
+    800px !important;
+  width: 100% !important;
+  border: 1px solid #FFFFFF3D !important;
+  border-radius:
+    8px !important;
+}
+
+.accordion-button {
+  background: transparent !important;
+  font-weight: 400;
+  font-size: 16px !important;
+  line-height: 24px;
+  color:
+    #A9A9A9 !important;
+  box-shadow: none !important;
+}
+
+.accordion {
+  border: 0 !important;
+
+}
+
+.accordion-button:not(.collapsed) {
+  color:
+    #F1F1F1 !important;
+  font-weight: 600 !important;
+  font-size: 16px !important;
+  line-height: 24px;
+
+}
+
+.accordion-button::after {
+  background-image: url(../src/assets/images/svg/accodion-arrow.svg) !important;
+}
+
+
+.accordion_bg {
+  background-image: url(../src/assets/images/png/accodion_2bg.webp);
+ 
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  background-color: #141403;
+}
+
+.accordion-body {
+  max-width: 563px;
+  padding-top: 0 !important;
+}
+
+/* footer */
+.footer_bg {
+  background-image: url(../src/assets/images/png/footer-bg.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #020200;
+  background-size: cover;
+}
+
+/* rang */
+input[type='range'] {
+  overflow: hidden;
+  max-width: 404px;
+  width: 100%;
+  border-radius:
+    125px !important;
+  -webkit-appearance: none;
+  background-color: #FFFFFF !important;
+  margin-top: 18px;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+  height:
+    22.75px;
+
+  -webkit-appearance: none;
+  color: #FFFFFF !important;
+  margin-top: -1px;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  width: 22.75px;
+  -webkit-appearance: none;
+  height: 22.75px;
+  border-radius: 50%;
+  cursor: ew-resize;
+  background: #434343;
+  background-image: url(../src/assets/images/svg/rang-bg-img.svg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  box-shadow: -200px 0 0 195px #FEF538;
+}
+
+img[alt="yellow_arrow"] {
+  position: absolute;
+  top: -29%;
+  left: 29%;
+}
+
+img[alt="white_arrow"] {
+  position: absolute;
+  top: -29%;
+  right: 5%;
+}
+
+/* social */
+.social_box {
+  max-width: 1140px;
+  width: 100%;
+  background-image: url(../src/assets/images/png/social-bg.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 16px;
+  position: relative;
+  padding: 20px;
+  z-index: 2;
+
+
+}
+
+.social_iconsbox {
+  border: 0.66px solid #F1F1F129;
+  background: #191919;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+transition: all linear 300ms;
+}
+.social_iconsbox:hover{
+  border: 0.66px solid white;
+}
+
+
+.social_box::before {
+  content: "";
+  position: absolute;
+  border: 1px solid transparent;
+  background: linear-gradient(107.74deg, rgba(255, 246, 36, 0.27) -16.6%, rgba(255, 246, 36, 0) 134.64%);
+  width: 100%;
+  mask-composite: exclude;
+  inset: 0;
+  border-radius:
+    16px;
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+
+  mask-composite: exclude;
+  z-index: -1;
+  transition: all linear 300ms !important;
+}
+img[alt="socialcartoon"]{
+
+  max-width: 284px;
+  width: 100%;
+  
+  opacity: 50%;
+  position: absolute;
+  right: -10%;
+}
+/* roadmap */
+.roadmap_box {
+  max-width:
+    300px;
+  width: 100%;
+  height: 100%;
+  background: #FFFFFF14;
+  border: 0;
+  border-radius: 16px;
+  position: relative;
+  z-index: 1;
+}
+.roadmap_box::before {
+  content: "";
+  position: absolute;
+  border: 1px solid transparent;
+  background: linear-gradient(153.46deg, rgba(255, 246, 36, 0.4) -9.68%, rgba(255, 246, 36, 0) 119.9%);
+  width: 100%;
+  mask-composite: exclude;
+  inset: 0;
+  border-radius:
+    16px;
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  mask-composite: exclude;
+  z-index: -1;
+  transition: all linear 300ms !important;
+}
+/* border: 1px solid;
+
+border-image-source: ;
+
+ */
+.roadmap_textdot {
+  height: 4px;
+  border-radius: 50%;
+  background: white;
+  width: 4px;
+
+}
+
+.gap-90 {
+  gap: 24px;
+}
+
+img[alt="rodmapchart"] {
+  max-width: 1930px;
+  position: absolute;
+  bottom: 2%;
+}
+
+.pb-366 {
+  padding-bottom: 20px;
+}
+
+img[alt="phase1"] {
+  position: absolute;
+  bottom: -20%;
+  left: 36%;
+  transform: translate(98%, -13%);
+}
+
+img[alt="phase2"] {
+  position: absolute;
+  bottom: -20%;
+  left: 38%;
+  transform: translate(97%, -54%);
+}
+
+img[alt="phase3"] {
+  position: absolute;
+  bottom: -35%;
+  left: 37%;
+  transform: translate(97%, -54%);
+
+}
+.roadmap_bg_img{
+  background-image: url(../src/assets/images/png/roadmap_bg_img.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+/* all ellipes */
+.hero_left_ellipe{
+  width: 100px;
+height: 100px;
+background: #FFF624;
+filter: blur(100px);
+display: none !important;
+}
+.hero_ellipe_1{
+  position: absolute;
+  bottom: -1%;
+  left: -5%;
+  z-index: 2;
+
+}
+.contect_ellipe1{
+  position: absolute;
+  left: -6%;
+  bottom: 2%;
+  z-index: 2;
+}
+.Audited_ellipe1{
+  position: absolute;
+  top: -9%;
+  right: -4%;
+}
+.Audited_ellipe2{
+  position: absolute;
+  bottom: -6%;
+  right: -7%;
+
+}
+section{
+  overflow: hidden;
+}
+.herobtn{
+  max-width:48px;
+  max-height:61px ;
+  width: 100%;
+  height:100%;
+  position: absolute;
+  right: 0%;
+  top: 61%;
+cursor: pointer;
+padding: 10px 4px 10px 4px;
+border-radius: 4px;
+border-bottom: 1px solid #FFFFFF17;
+background: linear-gradient(0deg, rgba(255, 255, 255, 0.04) 3.33%, rgba(255, 255, 255, 0) 69.17%);
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  min-width: 120px;
+  left: -30%;
+  top: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown-content{
+  transition: all linear 300ms;
+  cursor: pointer;
+}
+.dropdown-content:hover p{
+  color: #FFF624;
+}
+ .pt-12{
+  padding-top: 12px;
+ }
+ .gap_32{
+  gap: 25px;
+ }
+@media (min-width:576px) {
+  img[alt="herolyar"] {
+    bottom: -9%;
   }
-  to {
-    transform: rotate(360deg);
+  .clair_box {
+    max-width: 254px;
+    width: 100%;
   }
+  .Contract_section{
+    background-size: cover;
+  }
+  .Audited_bgimg{
+    background-size: cover;
+  }
+  .accordion_bg {
+    background-size: cover;
+  }
+
+}
+
+@media (min-width:768px) {
+  .token_box {
+    padding: 32px 75px 32px 75px;
+  }
+
+  .gap-90 {
+    gap: 40px;
+  }
+
+  img[alt="herolyar"] {
+    bottom: -11%;
+  }
+  .social_box{
+    padding: 50px 24px 40px 24px;
+  }
+  
+  .gap_32{
+    gap: 32px;
+   }
+
+}
+
+@media (min-width:992px) {
+  .mt-184 {
+    margin-top: 184px;
+  }
+  .pb-83 {
+    padding-bottom: 83px;
+  }
+  .pt-49 {
+    padding-top: 49px;
+  }
+  .mt-32 {
+    margin-top: 32px !important;
+  }
+
+  .mt-78 {
+    margin-top: 78px;
+  }
+  .pt-20 {
+    padding-top: 20px;
+  }
+  .pt-114 {
+    padding-top: 114px;
+  }
+  .pb-60 {
+    padding-bottom: 60px;
+  }
+  .pb_154{
+    padding-bottom: 154px;
+  }
+  .pt-165 {
+    padding-top: 165px;
+  }
+  .pb-165 {
+    padding-bottom: 165px;
+  }
+  .pb-96{
+    padding-bottom: 96px;
+  }
+  .pb-366 {
+    padding-bottom: 366px;
+  }
+
+  .gap-90 {
+    gap: 45px;
+  }
+  .pb-54 {
+    padding-bottom: 54px;
+  }
+  
+
+  img[alt="rodmapchart"] {
+
+    bottom: 9%;
+  }
+
+  img[alt="herolyar"] {
+    bottom: -12%;
+  }
+  .pt-66 {
+    padding-top: 66px;
+  }
+  .big_box{
+    padding: 40px;
+  }
+  .pt-100 {
+    padding-top: 100px;
+  }
+  .pb-154{
+    padding-bottom: 154px;
+  }
+  .pt-104 {
+    padding-top: 104px;
+  }
+  .mt-100 {
+    margin-top: 100px;
+  }
+  .accordion_bg {
+    background-size: 100% 100%;
+    background-image: url(../src/assets/images/png/address.webp);
+  }
+}
+
+@media (min-width:1024px) {
+  img[alt="rodmapchart"] {
+
+    bottom: 2%;
+  }
+
+  img[alt="herolyar"] {
+    bottom: -13.5%;
+  }
+  .Contract_section{
+    background-size: 100% 100%;
+  }
+  .pt-152 {
+    padding-top: 152px;
+  }
+  
+}
+
+@media (min-width:1200px) {
+
+  .gap-90{
+    gap: 90px;
+  }
+  img[alt="herolyar"] {
+    bottom: -17%;
+  }
+  .hero_left_ellipe{
+    display: block !important;
+  }
+}
+
+@media (min-width:1400px) {
+ 
+  .Audited_bgimg{
+    background-size: 100% 100%;
+  }
+  
+}
+
+@media (min-width:1535px) {
+  img[alt="rodmapchart"] {
+    bottom: -11%;
+  }
+}
+
+
+@media (max-width:992px) {
+  .mobile_view {
+    position: absolute;
+    background-color: #080705;
+    min-height: 100vh;
+    width: 100%;
+    top: 0;
+    left: -10%;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+    transition: 300ms linear;
+    position: fixed;
+    z-index: 3 !important;
+  }
+
+  .menu span:nth-child(1) {
+    height: 4px;
+    width: 35px;
+    background:#FFF624;
+    opacity: 70%;
+    display: block;
+  }
+
+  .menu span:nth-child(2) {
+    height: 4px;
+    width: 35px;
+    background:#FFF624;
+    opacity: 70%;
+    display: block;
+  }
+
+  .menu span:nth-child(3) {
+    height: 4px;
+    width: 35px;
+    background:#FFF624;
+    opacity: 70%;
+    display: block;
+  }
+
+
+  .start_0 {
+    left: 0;
+  }
+
+  .overflow_hidden {
+    overflow: hidden;
+  }
+
+  .start_100 {
+    left: -100% !important;
+  }
+
 }
